issue #28 - renamed project to checklist
